--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@
 
 /public/assets
 
-# Ignore master key for decrypting credentials and more.
-/config/master.key
+# # Ignore master key for decrypting credentials and more.
+# /config/master.key
 
-/config/credentials/production.key
+# /config/credentials/production.key
